// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assistive Text renders large AssistiveText 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #5A6A79;
}

.emotion-0:disabled {
  color: #C0C7CC;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #5A6A79;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #C0C7CC;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text renders medium AssistiveText 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #5A6A79;
}

.emotion-0:disabled {
  color: #C0C7CC;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #5A6A79;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #C0C7CC;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text renders small AssistiveText 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #5A6A79;
}

.emotion-0:disabled {
  color: #C0C7CC;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #5A6A79;
  font-family: "DM Sans",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #C0C7CC;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render disabled Assistive Text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #C0C7CC;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #C0C7CC;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      aria-disabled="true"
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render invalid Assistive Text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #D60000;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #D60000;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      aria-live="polite"
      class="emotion-1"
      role="alert"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #5A6A79;
  margin-block: 30px;
  padding-block: 30px;
}

.emotion-0:disabled {
  color: #C0C7CC;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #5A6A79;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #C0C7CC;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render with enhancer 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #5A6A79;
}

.emotion-0:disabled {
  color: #C0C7CC;
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.emotion-2 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #5A6A79;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-2:disabled {
  color: #C0C7CC;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      start
    </div>
    <p
      class="emotion-2"
    >
      Assistive Text
    </p>
    <div
      class="emotion-3"
    >
      start
    </div>
  </div>
</DocumentFragment>
`;
